fixed m8.1 error always visible

--- a/m8_1/styles.css
+++ b/m8_1/styles.css
@@ -26,7 +26,7 @@ body {
     background-color: #F2DEDE;
     margin-right: 2%;
     padding: 15px;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 .top-buffer-first-row {
